# libmseed

./: .clang-format  .gitignore  CMAKE.md  CMakeLists.txt  ChangeLog  INSTALL.md  LICENSE.txt  Makefile  Makefile.win  README  README.byteorder  README.md  TODO.txt  annotated.html  cbor.c  cbor.h  classes.html  crc32c.c  customdoxygen.css  deprecated.html  doxygen.css  doxygen_crawl.html  extraheaders.c  extraheaders.h  files.html  fileutils.c  functions.html  functions_eval.html  functions_vars.html  genutils.c  globals.html  globals_d.html  globals_defs.html  globals_enum.html  globals_f.html  globals_func.html  globals_l.html  globals_m.html  globals_n.html  globals_p.html  (+66 more)
.github/workflows/: build-test.yml
cmake/: libmseedConfig.cmake.in
doc/: Doxyfile  DoxygenLayout.xml  Introduction.txt  UsersGuide.txt  build-push-docs.sh  capabilities.dox  createlinks.sh  customdoxygen.css  examples.dox  faq.dox  footer.html  mainpage.dox  ms_intro.3  ms_log.3  ms_selection.3  msr_parse.3  porting.dox  tutorial.dox
doc/ndocs/: Project.txt
example/: CMakeLists.txt  Makefile  Makefile.win  README  lm_extraheaders.c  lm_pack.c  lm_pack_rollingbuffer.c  lm_pararead.c  lm_parse.c  lm_read_buffer.c  lm_read_recordlist.c  lm_read_selection.c  lm_read_timewin.c  lm_sids.c  lm_timestr.c  mseedview.c  msrepack.c  msview.c
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  functions_1.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  (+57 more)
test/: CMakeLists.txt  Makefile  Makefile.win  lm_extraheaders.c  lm_pack.c  lm_pack_rollingbuffer.c  lm_parse.c  lm_read_buffer.c  lm_read_recordlist.c  lm_read_selection.c  lm_sids.c  lm_timestr.c  lmtestbench.c  lmtestpack.c  lmtestparse.c  ms_readleapsecondfile-nullptr.test  ms_readleapsecondfile-nullptr.test.ref  ms_readleapsecondfile.test  ms_readleapsecondfile.test.ref  ms_readleapsecondfile_test.c  msr_unpack_data.test  msr_unpack_data.test.ref  msr_unpack_data_test.c  pack-Float32-encoded.test  pack-Float32-encoded.test.ref  pack-Float64-encoded.test  pack-Float64-encoded.test.ref  pack-Int16-encoded.test  pack-Int16-encoded.test.ref  pack-Int32-encoded.test  pack-Int32-encoded.test.ref  pack-Steim1-encoded.test  pack-Steim1-encoded.test.ref  pack-Steim2-encoded.test  pack-Steim2-encoded.test.ref  pack-text-encoded.test  pack-text-encoded.test.ref  parse-sids.test  parse-sids.test.ref  parse-timestr.test  (+75 more)
test/data/: invalid-blockette-offsets.mseed  reference-sinusoid-FDSN-All.mseed3  reference-sinusoid-FDSN-Other.mseed3  reference-sinusoid-TQ-TC-ED.mseed3  reference-sinusoid-float32.mseed3  reference-sinusoid-float64.mseed3  reference-sinusoid-int16.mseed3  reference-sinusoid-int32.mseed3  reference-sinusoid-steim1.mseed3  reference-sinusoid-steim2.mseed3  reference-testdata-defaults.mseed2  reference-testdata-defaults.mseed3  reference-testdata-float32.mseed2  reference-testdata-float32.mseed3  reference-testdata-float64.mseed2  reference-testdata-float64.mseed3  reference-testdata-flushidle.mseed2  reference-testdata-flushidle.mseed3  reference-testdata-headeronly.mseed2  reference-testdata-headeronly.mseed3  reference-testdata-int16.mseed2  reference-testdata-int16.mseed3  reference-testdata-int32.mseed2  reference-testdata-int32.mseed3  reference-testdata-mstlpack-rollingbuffer.mseed  reference-testdata-mstlpack.mseed2  reference-testdata-mstlpack.mseed3  reference-testdata-nsec.mseed2  reference-testdata-nsec.mseed3  reference-testdata-oddrate.mseed2  reference-testdata-oddrate.mseed3  reference-testdata-olden.mseed2  reference-testdata-olden.mseed3  reference-testdata-repack.mseed2  reference-testdata-repack.mseed3  reference-testdata-steim1-LE.mseed2  reference-testdata-steim1.mseed2  reference-testdata-steim1.mseed3  reference-testdata-steim2-LE.mseed2  reference-testdata-steim2.mseed2  (+7 more)
test/testdata/: Steim1-AllDifferences-BE.mseed  Steim1-AllDifferences-LE.mseed
